[gd_scene load_steps=2 format=2]

[ext_resource path="res://services/TurnManager.gd" type="Script" id=1]

[node name="TurnManager" type="Node2D"]
script = ExtResource( 1 )

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="CardActionTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="TurnTimer" to="." method="_on_TurnTimer_timeout"]
[connection signal="timeout" from="CardActionTimer" to="." method="_on_CardActionTimer_timeout"]
